--- a/src/style.css
+++ b/src/style.css
@@ -6,10 +6,12 @@ body > div {
     margin: 0;
     padding: 0;
     overflow: hidden;
+    background: var(--main-background-color);
 }
 
 *,
 *::before,
 *::after {
     box-sizing: border-box;
+    --main-background-color: #22211f;
 }
