--- a/src/style.css
+++ b/src/style.css
@@ -6,12 +6,11 @@ body > div {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background: var(--main-background-color);
+    body: var(--sand-11);
 }
 
 *,
 *::before,
 *::after {
     box-sizing: border-box;
-    --main-background-color: #22211f;
 }
